--- a/.github/workflows/c-cpp1.yml
+++ b/.github/workflows/c-cpp1.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: make
-      run: make -C 4_Implementation/ test
+      run: make -C 4_Implementation/ Test
